Correcciones pagina principal

--- a/principal.html
+++ b/principal.html
@@ -10,19 +10,25 @@
 </head>
 <body>
     <header> 
-        <img src="imagenes/logo.webp" alt="float-image-left" class="float-image-left">
+        <img src="imagenes/logo.webp" alt="float-image-left" class="float-image-left"> 
         <div class="navbar">
             <button class="menu-btn" onclick="toggleMenu()">☰</button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="principal.html">Inicio</a></li>
                     <li><a href="tutorial.html">Tutorial</a></li>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="programacion.html">Programacion</a></li>
+                    <li><a href="batallas.html">Informes</a></li>
+                    <li><a href="sobre_nosotros.html">Nosotros</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <div class="portada">
+        <h1>Space Wars</h1>
+        <p>¡Construye, Investiga y protege al planeta! </p>
+    </div>
+
+    
 
     <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
 </body>
