--- a/batallas.html
+++ b/batallas.html
@@ -25,7 +25,7 @@
     </header>
     <div class="portada">
         <h1>Space Wars</h1>
-        <p>¡Construye, Investiga y protege al planeta! </p>
+        <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
 
     <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
