--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -25,7 +25,49 @@
     </header>
     <div class="portada">
         <h1>Space Wars</h1>
-        <p>¡Construye, Investiga y protege al planeta! </p>
+        <h1>¡Construye, Investiga y protege al planeta! </h1>
+    </div>
+
+    <div class="contenido">
+        <div class="column">
+            <div class="container-foto">
+                <img src="imagenes/Marc.jpg" alt="container-foto">
+            </div>
+            <div class="flex-container">
+                <h1>Marc</h1>
+            </div>    
+            <p class="flex-container">
+                <p>Yo me he encargado de la parte de la <b><i>pagina web</i></b></p>
+            </p>
+        </div>
+    </div>
+
+    <div class="contenido">
+        <div class="column">
+            <div class="container-foto">
+                <img src="imagenes/sin_foto.webp" alt="container-foto">
+            </div>
+            <div class="flex-container">
+                <h1>Miguel</h1>
+            </div>    
+            <p class="flex-container">
+                <p>Yo me he encargado de la parte del <b><i>programa</i></b></p>
+            </p>
+        </div>
+    </div>
+
+    <div class="contenido">
+        <div class="column">
+            <div class="container-foto">
+                <img src="imagenes/sin_foto.webp" alt="container-foto">
+            </div>
+            <div class="flex-container">
+                <h1>Biel</h1>
+            </div>    
+            <p class="flex-container">
+                <p>Yo me he encargado de la parte del <b><i>programa</i></b></p>
+            </p>
+        </div>
     </div>
 
     <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
