--- a/tutorial.html
+++ b/tutorial.html
@@ -25,9 +25,36 @@
     </header>
     <div class="portada">
         <h1>Space Wars</h1>
-        <p>¡Construye, Investiga y protege al planeta! </p>
+        <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
 
+    <div class="contenido">
+        <div class="texto_informativo">
+            <h1><i>Como se juega</i></h1>
+            <p>
+                En este juego lo que tendras que hacer es a la vez de ir añadiendo tropas a tu ejercito, mejorar tus defensas y tecnologias para poder denfender tu planeta antes de que lleguen los enemigos. Cuando se acaba la batalla puedes llegar a conseguir mas recursos para seguir mejorarndo para lo que se te aproxima.
+            </p>
+            <div class="column_espacio"></div>
+            <p>
+                Al comenzar el juego, te dejara elegir 6 opciones:
+                <br></br>
+                1) Ver los datos del tu planeta
+                <br></br>
+                2) Construir tus tropas y defensas
+                <br></br>
+                3) Mejorar tecnologias atacantes/defensivas
+                <br></br>
+                4) Ver informes de batallas
+                <br></br>
+                0) Salir del juego
+                <br></br>
+                <div class="column_espacio"></div>
+            </p>
+            <h3>1) Ver los datos del tu planeta</h3>
+            <p>
+                En la primera opcion podras ver los datos de tu planeta, como por ejemplo: Que tecnologias tienes, la cantidad de recursos que tienes, la cantidad de tropas y defensas que tienes y el la cantidad y tipo de tropas/defensas.
+        </div>
+    </div>
     <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
 </body>
 </html>
