--- a/principal.html
+++ b/principal.html
@@ -24,11 +24,50 @@
         </div>
     </header>
     <div class="portada">
-        <h1>Space Wars</h1>
-        <p>¡Construye, Investiga y protege al planeta! </p>
+        <h1>Space Wars 2425</h1>
+        <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
 
+    <div class="contenido">
+        <div class="texto_informativo">
+            <h1><i>¡El futuro de la batalla intergaláctica ha comenzado!</i></h1>
+            <p>
+                Preparate para sumergirte en un universo devastado por la guerra, donde diferentes  facciones rebeldes, tecnologías alienígenas y flotas estelares se enfrentanen una lucha épica por la supremacia de tu planeta. 
+            </p>
+        </div>
+    </div>
+    <div class="contenido">
+        <div class = "column">
+            <p>
+                🧠 Crea tu ejercito y tus defensas para los ataques enemigos.
+            </p>
+            <p>
+                ⚔️ Mira los resultados de las batallas y consigue recursos para mejorar tu ejercito/defensas y tecnologías.
+            </p>
+            <p>
+                🌌 Protege el planeta <i>llenos de misterios y amenazas</i>
+            </p>
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="column">
+            <p class="flex-container">
+                Imagenes promocionales del juego.
+            </p>
+            <div class="carousel-container">
+                <input type="radio" name="slide" id="slide1" checked>
+                <input type="radio" name="slide" id="slide2" checked>
+                
+                <div class="carousel-images">
+                    <img src="imagenes/sin_foto.webp" alt="imagen1">
+                    <img src="imagenes/sin_foto.webp" alt="imagen2">
+                </div>
+            </div>
+        </div>
+    </div>
     
+
+
 
     <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
 </body>
