--- a/principal.html
+++ b/principal.html
@@ -25,24 +25,24 @@
     </header>
     <div class="portada">
         <h1>Space Wars 2425</h1>
-        <h1>¡Construye, Investiga y protege al planeta! </h1>
+        <h1>¡Construye, investiga y protege al planeta! </h1>
     </div>
 
     <div class="contenido">
         <div class="texto_informativo">
-            <h1><i>¡El futuro de la batalla intergaláctica ha comenzado!</i></h1>
+            <h1><i>¡El futuro de tu planeta ha comenzado!</i></h1>
             <p>
-                Preparate para sumergirte en un universo devastado por la guerra, donde diferentes  facciones rebeldes, tecnologías alienígenas y flotas estelares se enfrentanen una lucha épica por la supremacia de tu planeta. 
+                Preparate para sumergirte en un universo devastado por la guerra, donde diferentes facciones rebeldes, tecnologías alienígenas y flotas estelares se enfrentanen una lucha épica por la supremacia de tu planeta. 
             </p>
         </div>
     </div>
     <div class="contenido">
         <div class = "column">
             <p>
-                🧠 Crea tu ejercito y tus defensas para los ataques enemigos.
+                🧠 Crea tu flota y tus defensas para los ataques enemigos.
             </p>
             <p>
-                ⚔️ Mira los resultados de las batallas y consigue recursos para mejorar tu ejercito/defensas y tecnologías.
+                ⚔️ Mira los resultados de las batallas y consigue recursos para mejorar tu flota, defensas y tecnologías.
             </p>
             <p>
                 🌌 Protege el planeta <i>llenos de misterios y amenazas</i>
