--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -30,8 +30,8 @@
 
     <div class="contenido">
         <div class="column">
-            <div class="container-foto">
-                <img src="imagenes/Marc.jpg" alt="container-foto">
+            <div class="container_foto">
+                <img src="imagenes/marc_prueba.png" alt="container_about_us">
             </div>
             <div class="flex-container">
                 <h1>Marc</h1>
@@ -44,8 +44,8 @@
 
     <div class="contenido">
         <div class="column">
-            <div class="container-foto">
-                <img src="imagenes/sin_foto.webp" alt="container-foto">
+            <div class="container_foto">
+                <img src="imagenes/sin_foto.webp" alt="container_about_us">
             </div>
             <div class="flex-container">
                 <h1>Miguel</h1>
@@ -58,8 +58,8 @@
 
     <div class="contenido">
         <div class="column">
-            <div class="container-foto">
-                <img src="imagenes/sin_foto.webp" alt="container-foto">
+            <div class="container_foto">
+                <img src="imagenes/biel_prueba.jpg" alt="container_about_us">
             </div>
             <div class="flex-container">
                 <h1>Biel</h1>
