--- a/tutorial.html
+++ b/tutorial.html
@@ -32,7 +32,7 @@
         <div class="texto_informativo">
             <h1><i>Como se juega</i></h1>
             <p>
-                En este juego lo que tendras que hacer es a la vez de ir añadiendo tropas a tu ejercito, mejorar tus defensas y tecnologias para poder denfender tu planeta antes de que lleguen los enemigos. Cuando se acaba la batalla puedes llegar a conseguir mas recursos para seguir mejorarndo para lo que se te aproxima.
+                En este juego lo que tendras que hacer es a la vez de ir añadiendo flota a tu planeta, mejorar tus defensas y tecnologias para poder defender tu planeta antes de que lleguen los enemigos. Cuando se acaba la batalla puedes llegar a conseguir mas recursos para seguir mejorando para las siguientes invasiones.
             </p>
             <div class="column_espacio"></div>
             <p>
@@ -40,7 +40,7 @@
                 <br></br>
                 1) Ver los datos del tu planeta
                 <br></br>
-                2) Construir tus tropas y defensas
+                2) Construir tu flota y defensas
                 <br></br>
                 3) Mejorar tecnologias atacantes/defensivas
                 <br></br>
@@ -52,7 +52,19 @@
             </p>
             <h3>1) Ver los datos del tu planeta</h3>
             <p>
-                En la primera opcion podras ver los datos de tu planeta, como por ejemplo: Que tecnologias tienes, la cantidad de recursos que tienes, la cantidad de tropas y defensas que tienes y el la cantidad y tipo de tropas/defensas.
+                En la primera opcion podras ver los datos de tu planeta, como por ejemplo: Que tecnologias tienes, la cantidad de recursos que tienes, la cantidad de flota y defensas que tienes y la cantidad de cada tipo de flota/defensa.
+            </p>
+            <h3>2) Construir tu flota y defensas</h3>
+            <p>
+                <!--costes, armadura, ataque probabilidadde ataque adicional y de restos-->
+                En la segunda opcion podras construir tu flota y defensas, para ello tendras que elegir entre 4 tipos de flota y 3 tipos de defensas. Cada una de ellas tiene sus ventajas y desventajas, por lo que tendras que elegir bien que tipo de flota/defensa quieres.
+                <br></br>
+                <p><b><i>Ventajas</i></b></p>
+                <p class="left-dot">Diferente armadura</p>
+                <br></br>
+                <p class="left-dot">ventajas y desventajas</p>
+                
+            </p>
         </div>
     </div>
     <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
