--- a/batallas.html
+++ b/batallas.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Space Wars</title>
     <link rel="stylesheet" href="css_global.css">
     <link rel="scriptsheet" href="js_carga.js">
@@ -28,6 +28,6 @@
         <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
 
-    <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
+    <footer class = "footer"><center>&copy;Copyright</center></footer>
 </body>
 </html>
