--- a/principal.html
+++ b/principal.html
@@ -63,12 +63,25 @@
                     <img src="imagenes/sin_foto.webp" alt="imagen2">
                 </div>
             </div>
+            <div class="column_espacio"></div>
+            <div class="column_espacio"></div>
+            <div class="column_espacio"></div>
         </div>
     </div>
-    
-
-
-
-    <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
+    <div class="contenido">
+        <div class="column">
+            <h1><b><i>Descargar el juego aqui</i></b></h1>
+            <button class="down-btn" onclick="toggleDown()"><u>Descargar juego</u></button>
+            <nav id="download" class="download">
+                <ul>
+                    <a href="prueba_para_cmd.zip" download>ZIP</a>
+                    <a href="prueba_para_cmd.7z" download>7Z</a>
+                    <a href="prueba_para_cmd.tar" download>TAR</a>
+                </ul>
+            </nav>
+            <div class="column_espacio"></div>
+        </div>
+    </div>
+    <footer class = "footer"><center>&copy;Copyright</center></footer>
 </body>
 </html>
