--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -70,6 +70,6 @@
         </div>
     </div>
 
-    <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
+    <footer class = "footer"><center>&copy;Copyright</center></footer>
 </body>
 </html>
