--- a/tutorial.html
+++ b/tutorial.html
@@ -48,25 +48,52 @@
                 <br></br>
                 0) Salir del juego
                 <br></br>
-                <div class="column_espacio"></div>
+                Pero cuando se vaya acercando una nueva flota enemiga te saldra una nueva opcion que seria 
+                <p>
+                    <i><b>"5) Ver la flota que viene"</b></i>
+                </p>
+                <br></br>
             </p>
             <h3>1) Ver los datos del tu planeta</h3>
             <p>
                 En la primera opcion podras ver los datos de tu planeta, como por ejemplo: Que tecnologias tienes, la cantidad de recursos que tienes, la cantidad de flota y defensas que tienes y la cantidad de cada tipo de flota/defensa.
             </p>
+            <br></br>
             <h3>2) Construir tu flota y defensas</h3>
             <p>
-                <!--costes, armadura, ataque probabilidadde ataque adicional y de restos-->
-                En la segunda opcion podras construir tu flota y defensas, para ello tendras que elegir entre 4 tipos de flota y 3 tipos de defensas. Cada una de ellas tiene sus ventajas y desventajas, por lo que tendras que elegir bien que tipo de flota/defensa quieres.
+                En la segunda opcion podras construir tu flota y defensas, para ello tendras que elegir entre 4 tipos de flota y 3 tipos de defensas. Cada una de ellas tiene sus diferencias, por lo que tendras que elegir bien que tipo de flota/defensa quieres.
                 <br></br>
-                <p><b><i>Ventajas</i></b></p>
+                <p><b><i>Diferencias</i></b></p>
                 <p class="left-dot">Diferente armadura</p>
-                <br></br>
-                <p class="left-dot">ventajas y desventajas</p>
-                
+                <p class="left-dot">Diferentes costes para construirlos</p>
+                <p class="left-dot">Diferentes probabilidades de ataque adicional</p>
+                <p class="left-dot">Diferentes probabilidades de restos de la batalla </p>
             </p>
+            <br></br>
+            <h3>3) Mejorar tecnologias atacantes/defensivas</h3>
+            <p>
+                Aqui podras mejorar tus tecnologias, de ataque y defensa. Pero cada vez que vayas mejorando una tecnologia, el coste de la siguiente mejora sera mayor. Por lo que tendras que elegir bien que tecnologia quieres mejorar.
+            </p>
+            <br></br>
+            <h3>4) Ver informes de batallas</h3>
+            <p>
+                En esta opcion podras ver los informes de las batallas que has tenido, y si has ganado o perdido. Ademas de la cantidad de recursos que has conseguido o perdido y de las unidades que has perdido.
+            </p>
+            <br></br>
+            <h3>0) Salir del juego</h3>
+            <p>
+                Para salir del juego, simplemente selecciona la opción 0 y confirma tu decisión. ¡Gracias por jugar!
+            </p>
+            <br></br>
+            <h3>5) Ver la flota que viene</h3>
+            <p>
+                Aqui se te mostrara la cantidad y que tiene esa flota enemiga.
+            </p>
+            <br><br>
         </div>
     </div>
-    <footer class = "footer"><center>&copy; Marc, Miguel, Biel</center></footer>
+    <div>
+    </div>
+    <footer class = "footer"><center>&copy;Copyright</center></footer>
 </body>
 </html>
