--- a/principal.html
+++ b/principal.html
@@ -15,16 +15,17 @@
             <button class="menu-btn" onclick="toggleMenu()">☰</button>
             <nav id="menu" class="menu">
                 <ul>
-                    <li><a href="principal.html">Inicio</a></li>
+                    <!--<li><a href="principal.html">Inicio</a></li>-->
                     <li><a href="tutorial.html">Tutorial</a></li>
                     <li><a href="batallas.html">Informes</a></li>
                     <li><a href="sobre_nosotros.html">Nosotros</a></li>
+                    <li><a href="tutorial_instalacion.html">Instalacion</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <div class="portada">
-        <h1>Space Wars 2425</h1>
+        <h1>Space Wars</h1>
         <h1>¡Construye, investiga y protege al planeta! </h1>
     </div>
 
@@ -64,21 +65,22 @@
                 </div>
             </div>
             <div class="column_espacio"></div>
-            <div class="column_espacio"></div>
-            <div class="column_espacio"></div>
         </div>
     </div>
     <div class="contenido">
         <div class="column">
-            <h1><b><i>Descargar el juego aqui</i></b></h1>
-            <button class="down-btn" onclick="toggleDown()"><u>Descargar juego</u></button>
-            <nav id="download" class="download">
-                <ul>
-                    <a href="prueba_para_cmd.zip" download>ZIP</a>
-                    <a href="prueba_para_cmd.7z" download>7Z</a>
-                    <a href="prueba_para_cmd.tar" download>TAR</a>
-                </ul>
-            </nav>
+            <h1><p class = "titulo_des"><b><i>Descarga-lo aqui</i></b></p></h1>
+            <ul class="blanco_boton">
+                <button class="down-btn" onclick="toggleDown()"><p><u>Descargar juego</u></p></button>
+                <nav id="download" class="download">
+                    <ul>
+                        <li><a href="juego_space_wars.zip" download>ZIP</a></li>
+                    </ul>
+                </nav>
+            </ul>
+            <br></br>
+            <p><a href="tutorial_instalacion.html" class="color">Tutorial</a> instalacion y como empezar a jugar</p>
+            <div class="column_espacio"></div>
             <div class="column_espacio"></div>
         </div>
     </div>
