--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -18,7 +18,8 @@
                     <li><a href="principal.html">Inicio</a></li>
                     <li><a href="tutorial.html">Tutorial</a></li>
                     <li><a href="batallas.html">Informes</a></li>
-                    <li><a href="sobre_nosotros.html">Nosotros</a></li>
+                    <!--<li><a href="sobre_nosotros.html">Nosotros</a></li>-->
+                    <li><a href="tutorial_instalacion.html">Instalacion</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,8 +31,9 @@
 
     <div class="contenido">
         <div class="column">
+            <h1><i>Nuestro equipo</i></h1>
             <div class="container_foto">
-                <img src="imagenes/marc_prueba.png" alt="container_about_us">
+                <img src="imagenes/marc.png" alt="container_about_us">
             </div>
             <div class="flex-container">
                 <h1>Marc</h1>
@@ -45,7 +47,7 @@
     <div class="contenido">
         <div class="column">
             <div class="container_foto">
-                <img src="imagenes/sin_foto.webp" alt="container_about_us">
+                <img src="imagenes/miguel.png" alt="container_about_us">
             </div>
             <div class="flex-container">
                 <h1>Miguel</h1>
@@ -59,7 +61,7 @@
     <div class="contenido">
         <div class="column">
             <div class="container_foto">
-                <img src="imagenes/biel_prueba.jpg" alt="container_about_us">
+                <img src="imagenes/biel.jpg" alt="container_about_us">
             </div>
             <div class="flex-container">
                 <h1>Biel</h1>
