--- a/tutorial.html
+++ b/tutorial.html
@@ -16,9 +16,10 @@
             <nav id="menu" class="menu">
                 <ul>
                     <li><a href="principal.html">Inicio</a></li>
-                    <li><a href="tutorial.html">Tutorial</a></li>
+                    <!--<li><a href="tutorial.html">Tutorial</a></li>-->
                     <li><a href="batallas.html">Informes</a></li>
                     <li><a href="sobre_nosotros.html">Nosotros</a></li>
+                    <li><a href="tutorial_instalacion.html">Instalacion</a></li>
                 </ul>
             </nav>
         </div>
