--- a/batallas.html
+++ b/batallas.html
@@ -17,8 +17,9 @@
                 <ul>
                     <li><a href="principal.html">Inicio</a></li>
                     <li><a href="tutorial.html">Tutorial</a></li>
-                    <li><a href="batallas.html">Informes</a></li>
+                    <!--<li><a href="batallas.html">Informes</a></li>-->
                     <li><a href="sobre_nosotros.html">Nosotros</a></li>
+                    <li><a href="tutorial_instalacion.html">Instalacion</a></li>
                 </ul>
             </nav>
         </div>
@@ -26,6 +27,12 @@
     <div class="portada">
         <h1>Space Wars</h1>
         <h1>¡Construye, Investiga y protege al planeta! </h1>
+    </div>
+    <div class="contenido">
+        <div class="texto_informativo">
+            <h1><i>Informes de tu batalla</i></h1>
+
+        </div>
     </div>
 
     <footer class = "footer"><center>&copy;Copyright</center></footer>
