--- a/principal.html
+++ b/principal.html
@@ -48,6 +48,9 @@
             <p>
                 🌌 Protege el planeta <i>llenos de misterios y amenazas</i>
             </p>
+            <p>
+                ⛔ Tienes que tener la version de <b>java superior a 11.0.12</b> para poder jugar.
+            </p>
         </div>
     </div>
     <div class="contenido">
