--- a/tutorial_instalacion.html
+++ b/tutorial_instalacion.html
@@ -47,13 +47,70 @@
             <img src="imagenes/paso_2.png" alt="container_foto">
             <br></br>
             <p>
-                Apartir de aqui necesitas tener instalado java (si ya lo tienes saltate este paso):
-            </p>
-            <p>
-                1.Vete a esta <a href="https://adoptium.net/">web para descarga java</a>:
+                Apartir de aqui necesitas tener instalado java (<u><b>si ya lo tienes saltate este paso y con la version superior a 11.0.12</b></u>):
             </p>
             <br></br>
+            <p>
+                Para saber que lo tienes instalado, pulsa <b>Windows + R</b> y escribe <b>cmd</b> luego pulsa <b>Enter</b> o pulsando la tecla de <b>"Windows"</b> y escribe <b>"cmd"</b> luego pulsa <b>Enter</b>. Se te abrira una ventana negra, en la cual tienes que escribir <b>"java -version"</b> o <b>"javac -version"</b> y si te sale algo como esto es que lo tienes instalado (<i><u>la version tiene que ser superior a <b>11.0.12</b></u></i>):
+            </p>
+            <br></br>
+            <p>Ejemplo de <i>java -version</i>:</p>
+            <img src="imagenes/java-version.png" alt="container_foto">
+            <br></br>
+            <p>Ejemplo de <i>javac -version</i>:</p>
+            <img src="imagenes/javac-version.png" alt="container_foto">
+            <br></br>
+            <p>
+                1.Vete a esta web para <a href="https://adoptium.net/" class="color">descarga java</a>:
+            </p>
+            <p>
+                2. Dale al boton de <b>Download</b> y selecciona la version que quieras (recomendamos superior a <b>11.0.12</b>):
+            </p>
+            <img src="imagenes/boton_descarga_java.png" alt="container_foto">
+            <p>
+                3. Ahora ejecutamos el instalador: cambiar foto
+            </p>
+            <img src="imagenes/ejecutar_instalador.png" alt="Instalador de Java">
+            <p>
+                4. Aceptamos todo y le damos a next hasta que se instale:
+            </p>
+            <p>
+                5.Ahora comprobamos que esta instalado con lo que hemos hecho antes:
+            </p>
+            <img src="imagenes/tut_comprobar_win.png" alt="container_foto">
+            <br></br>
             <h1><b>Tutorial de Instalación (Ubuntu)</b></h1>
+            <p>
+                1.Abre la terminal y escribe <b>sudo apt update</b> y <b>sudo apt upgrade</b> para actualizar el sistema:
+            </p>
+            <div>
+                <img src="imagenes/sudo_apt_update.png" alt="container_foto">
+                <p></p>
+                <img src="imagenes/sudo_apt_upgrade.png" alt="container_foto">
+            </div>
+            <p>
+                2. <b>sudo apt install openjdk-<i>version que quieres en este caso <u>17</u></i>-jdk</b>:
+            </p>
+            <img src="imagenes/ubuntu_instalacion.png" alt="container_foto">
+            <p>
+                3. Ahora comprobamos que esta instalado con lo que hemos hecho antes:
+            </p>
+            <img src="imagenes/tut_comprobar_ubu.png" alt="container_foto">
+            <p>
+                4. Si lo teneis instalado, haremos lo siguiente para poder actualizar en este caso la version 21:
+            </p>
+            <img src="imagenes/version_21_instalacion.png" alt="container_foto">
+            <p>
+                5. Ahora haremos lo siguiente y nos mostrara esto:
+            </p>
+            <div>
+                <img src="imagenes/actu_java_ubu.png" alt="container_foto">
+                <p></p>
+                <img src="imagenes/opciones_ubu.png" alt="container_foto">
+            </div>
+            <p>
+                Yo lo he puesto manual pero normalmente se te pone el automatico(<u><i>0</i></u>) pero es por si no se te pone, aqui como he dicho si en automatico no se te pone, pon el numero de la version de la opcion que se te muestra 
+            </p>
             <br></br>
             <h1><b>Tutorial de como empezar a jugar</b></h1>
         </div>
