--- a/batallas.html
+++ b/batallas.html
@@ -32,6 +32,8 @@
         <div class="texto_informativo">
             <h1><i>Informes de tu batalla</i></h1>
 
+            <div class="column_espacio"></div>
+            <div class="column_espacio"></div>
         </div>
     </div>
 
