--- a/tutorial.html
+++ b/tutorial.html
@@ -91,6 +91,8 @@
                 Aqui se te mostrara la cantidad y que tiene esa flota enemiga.
             </p>
             <br><br>
+            <div class="column_espacio"></div>
+            <div class="column_espacio"></div>
         </div>
     </div>
     <div>
