--- a/tutorial_instalacion.html
+++ b/tutorial_instalacion.html
@@ -28,12 +28,11 @@
         <h1>Space Wars</h1>
         <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
-
     <div class="contenido">
         <div class="texto_informativo">
-            <h1><b>Tutorial de Instalación (Windows)</b></h1>
+            <h1><b>Descarga del juego y más</b></h1>
             <p>
-                Al descargar el archivo comprimido del juego tendras que descomprimirlo en un sitio que si o si te acuerdes.
+                Al descargar el archivo comprimido del juego tendrás que descomprimirlo en un sitio que sí o sí te acuerdes.
             </p>
             <br></br>
             <p>
@@ -60,6 +59,11 @@
             <p>Ejemplo de <i>javac -version</i>:</p>
             <img src="imagenes/javac-version.png" alt="container_foto">
             <br></br>
+        </div>
+    </div>
+    <div class="contenido">
+        <div class="texto_informativo">
+            <h1><b>Tutorial de Instalación Java (Windows)</b></h1>
             <p>
                 1.Vete a esta web para <a href="https://adoptium.net/" class="color">descarga java</a>:
             </p>
@@ -79,7 +83,7 @@
             </p>
             <img src="imagenes/tut_comprobar_win.png" alt="container_foto">
             <br></br>
-            <h1><b>Tutorial de Instalación (Ubuntu)</b></h1>
+            <h1><b>Tutorial de Instalación Java (Ubuntu)</b></h1>
             <p>
                 1.Abre la terminal y escribe <b>sudo apt update</b> y <b>sudo apt upgrade</b> para actualizar el sistema:
             </p>
@@ -109,10 +113,22 @@
                 <img src="imagenes/opciones_ubu.png" alt="container_foto">
             </div>
             <p>
-                Yo lo he puesto manual pero normalmente se te pone el automatico(<u><i>0</i></u>) pero es por si no se te pone, aqui como he dicho si en automatico no se te pone, pon el numero de la version de la opcion que se te muestra 
+                Yo lo he puesto manual pero normalmente se te pone el automatico(<u><i>0</i></u>) pero es por si no se te pone, aqui como he dicho si en automatico no se te pone, pon el numero de la version de la opcion que se te muestra en este caso queremos la <b>version 21</b> asi que pulsamos en este case <b>"2"</b> y deberia de quedar asi:
             </p>
+            <img src="imagenes/select_ver.png" alt="container_foto">
             <br></br>
             <h1><b>Tutorial de como empezar a jugar</b></h1>
+            <p>
+                Vale ahora que tenemos la version correcta de java y el juego descargado ahora tocara jugarlo.
+                <p></p>
+                <h1><b>Desde Windows</b></h1>
+                <br></br>
+                1. Abre el :
+                <br></br>
+                
+            </p>
+            <div class="column_espacio"></div>
+            <div class="column_espacio"></div>
         </div>
     </div>
 
