--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -69,6 +69,8 @@
             <p class="flex-container">
                 <p>Yo me he encargado de la parte del <b><i>programa</i></b></p>
             </p>
+            <div class="column_espacio"></div>
+            <div class="column_espacio"></div>
         </div>
     </div>
 
