--- a/principal.html
+++ b/principal.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Wars</title>
+    <title>Planet Wars</title>
     <link rel="stylesheet" href="css_global.css">
-    <link rel="scriptsheet" href="js_carga.js">
     <script src="js_button_menu.js"></script>
+    <script src="js_carga.js"></script>
 </head>
 <body>
     <header> 
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="portada">
-        <h1>Space Wars</h1>
+        <h1>Planet Wars</h1>
         <h1>¡Construye, investiga y protege al planeta! </h1>
     </div>
 
@@ -77,7 +77,7 @@
                 <button class="down-btn" onclick="toggleDown()"><p><u>Descargar juego</u></p></button>
                 <nav id="download" class="download">
                     <ul>
-                        <li><a href="juego_space_wars.zip" download>ZIP</a></li>
+                        <li><a href="Planet_Wars.zip" download>ZIP</a></li>
                     </ul>
                 </nav>
             </ul>
