--- a/tutorial_instalacion.html
+++ b/tutorial_instalacion.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Space Wars</title>
+    <title>Planet Wars</title>
     <link rel="stylesheet" href="css_global.css">
-    <link rel="scriptsheet" href="js_carga.js">
     <script src="js_button_menu.js"></script>
+    <script src="js_carga.js"></script>
 </head>
 <body>
     <header> 
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="portada">
-        <h1>Space Wars</h1>
+        <h1>Planet Wars</h1>
         <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
     <div class="contenido">
@@ -122,12 +122,42 @@
                 Vale ahora que tenemos la version correcta de java y el juego descargado ahora tocara jugarlo.
                 <p></p>
                 <h1><b>Desde Windows</b></h1>
-                <br></br>
-                1. Abre el :
-                <br></br>
-                
+                1. Abre el terminal:              
             </p>
-            <div class="column_espacio"></div>
+            <img src="imagenes/cmd.png" alt="container_foto">
+            <p>
+                2. Ahora tendremos que ir a la carpeta donde esta el juego en mi caso <b><i>Desktop/Planet Wars</i></b>
+            </p>
+            <img src="imagenes/desk_dir.png" alt="container_foto">
+            <p>
+                3. Ahora tocaria abrirlo con el siguiente comando:
+            </p>
+            <img src="imagenes/abrir_juego.png" alt="container_foto">
+            <p>
+                Ahora como podeis ver se nos ha abierto el juego y ya podemos jugar:
+            </p>
+            <div class="container_foto_especial">
+                <img src="imagenes/juego.png" alt="container_foto_especial">
+            </div>
+            <p>
+                <h1><b>Desde Ubuntu</b></h1>
+                1. Abre el terminal:
+            </p>
+            <img src="imagenes/terminal.png" alt="container_foto">
+            <p>
+                2. Ahora vamos al directorio donde esta el juego:
+            </p>
+            <img src="imagenes/canviar_dir.png" alt="container_foto">
+            <p>
+                3. Ponemos la misma comanda que anteriormente en Windows:
+            </p>
+            <img src="imagenes/abrir_juego2.png" alt="container_foto">
+            <p>
+                4. Y ya podemos juagarlo:
+            </p>
+            <div class="container_foto_especial">
+                <img src="imagenes/juego2.png" alt="container_foto_especial">
+            </div>
             <div class="column_espacio"></div>
         </div>
     </div>
