--- a/batallas.html
+++ b/batallas.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>Space Wars</title>
+    <title>Planet Wars</title>
     <link rel="stylesheet" href="css_global.css">
-    <link rel="scriptsheet" href="js_carga.js">
     <script src="js_button_menu.js"></script>
+    <script src="js_carga.js"></script>
+    <script src="informes.js"></script>
 </head>
 <body>
     <header> 
@@ -25,13 +26,19 @@
         </div>
     </header>
     <div class="portada">
-        <h1>Space Wars</h1>
+        <h1>Planet Wars</h1>
         <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
     <div class="contenido">
         <div class="texto_informativo">
             <h1><i>Informes de tu batalla</i></h1>
-
+            <div>
+                <input id="num_inf" type="number" min="0" class="input_num">
+                <button class="inf-btn" id="btn_generar_informe" type="button" onclick="generarInforme()">Generar Informe</button>
+            </div>
+            <h5><b><p id="resultado" class="color"></p></b></h5>
+            <br></br>
+            <p id="Informe"></p>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
         </div>
