--- a/tutorial.html
+++ b/tutorial.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Space Wars</title>
+    <title>Planet Wars</title>
     <link rel="stylesheet" href="css_global.css">
-    <link rel="scriptsheet" href="js_carga.js">
     <script src="js_button_menu.js"></script>
+    <script src="js_carga.js"></script>
 </head>
 <body>
     <header> 
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div class="portada">
-        <h1>Space Wars</h1>
+        <h1>Planet Wars</h1>
         <h1>¡Construye, Investiga y protege al planeta! </h1>
     </div>
 
