--- a/sobre_nosotros.html
+++ b/sobre_nosotros.html
@@ -67,7 +67,7 @@
                 <h1>Biel</h1>
             </div>    
             <p class="flex-container">
-                <p>Yo me he encargado de la parte del <b><i>programa</i></b></p>
+                <p>Yo me he encargado de la parte del <b><i>programa</i></b> y de la parte de <b><i>base de datos</i></b></p>
             </p>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
