--- a/tutorial_instalacion.html
+++ b/tutorial_instalacion.html
@@ -126,7 +126,7 @@
             </p>
             <img src="imagenes/cmd.png" alt="container_foto">
             <p>
-                2. Ahora tendremos que ir a la carpeta donde esta el juego en mi caso <b><i>Desktop/Planet Wars</i></b>
+                2. Ahora tendremos que ir a la carpeta donde esta el juego en mi caso <b><i>Desktop/Planet_Wars/GamePlanetWars/</i></b>
             </p>
             <img src="imagenes/desk_dir.png" alt="container_foto">
             <p>
@@ -139,6 +139,7 @@
             <div class="container_foto_especial">
                 <img src="imagenes/juego.png" alt="container_foto_especial">
             </div>
+            <p></p>
             <p>
                 <h1><b>Desde Ubuntu</b></h1>
                 1. Abre el terminal:
@@ -147,7 +148,9 @@
             <p>
                 2. Ahora vamos al directorio donde esta el juego:
             </p>
-            <img src="imagenes/canviar_dir.png" alt="container_foto">
+            <div class="container_foto_especial_cmd">
+               <img src="imagenes/canviar_dir.png" alt="container_foto">
+            </div>
             <p>
                 3. Ponemos la misma comanda que anteriormente en Windows:
             </p>
