--- a/M4/WEB/tutorial.html
+++ b/M4/WEB/tutorial.html
@@ -36,61 +36,55 @@
                 En este juego lo que tendras que hacer es a la vez de ir añadiendo flota a tu planeta, mejorar tus defensas y tecnologias para poder defender tu planeta antes de que lleguen los enemigos. Cuando se acaba la batalla puedes llegar a conseguir mas recursos para seguir mejorando para las siguientes invasiones.
             </p>
             <div class="column_espacio"></div>
-            <p>
-                Al comenzar el juego, te dejara elegir 6 opciones:
-                <br></br>
-                1) Ver los datos del tu planeta
-                <br></br>
-                2) Construir tu flota y defensas
-                <br></br>
-                3) Mejorar tecnologias atacantes/defensivas
-                <br></br>
-                4) Ver informes de batallas
-                <br></br>
-                0) Salir del juego
-                <br></br>
-                Pero cuando se vaya acercando una nueva flota enemiga te saldra una nueva opcion que seria 
-                <p>
-                    <i><b>"5) Ver la flota que viene"</b></i>
-                </p>
-                <br></br>
-            </p>
-            <h3>1) Ver los datos del tu planeta</h3>
-            <p>
-                En la primera opcion podras ver los datos de tu planeta, como por ejemplo: Que tecnologias tienes, la cantidad de recursos que tienes, la cantidad de flota y defensas que tienes y la cantidad de cada tipo de flota/defensa.
-            </p>
+            <p>Al iniciar el juego, te saldra lo siguiente:</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/juego.png" alt="container_foto_juego">
+            </div>
+            <p>funcion del inicio</p>
             <br></br>
-            <h3>2) Construir tu flota y defensas</h3>
-            <p>
-                En la segunda opcion podras construir tu flota y defensas, para ello tendras que elegir entre 4 tipos de flota y 3 tipos de defensas. Cada una de ellas tiene sus diferencias, por lo que tendras que elegir bien que tipo de flota/defensa quieres.
-                <br></br>
-                <p><b><i>Diferencias</i></b></p>
-                <p class="left-dot">Diferente armadura</p>
-                <p class="left-dot">Diferentes costes para construirlos</p>
-                <p class="left-dot">Diferentes probabilidades de ataque adicional</p>
-                <p class="left-dot">Diferentes probabilidades de restos de la batalla </p>
-            </p>
+            <p>Estas serian todas las ventanas que en cada una se hace algo diferente:</p>
+            <img src="imagenes/ventanas.png" alt="container_foto">
             <br></br>
-            <h3>3) Mejorar tecnologias atacantes/defensivas</h3>
-            <p>
-                Aqui podras mejorar tus tecnologias, de ataque y defensa. Pero cada vez que vayas mejorando una tecnologia, el coste de la siguiente mejora sera mayor. Por lo que tendras que elegir bien que tecnologia quieres mejorar.
-            </p>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_ventana\(de\ momento\).png);">
+                <h3><p>Ventana Stats</p></h3>
+            </div>
+            <p>En esta ventana se vera todo lo relacionado solo a nuestro planeta:</p>
             <br></br>
-            <h3>4) Ver informes de batallas</h3>
-            <p>
-                En esta opcion podras ver los informes de las batallas que has tenido, y si has ganado o perdido. Ademas de la cantidad de recursos que has conseguido o perdido y de las unidades que has perdido.
-            </p>
+            <!--  nivel tecnologico, cantidad de flota, cantidad de defensas y si pasa algo malo como que tene-->
+            <p>1) Cantidad de materiales que tenemos:</p>
+            <div class="container_foto_juego_peque">
+                <img src="imagenes/materiales.png" alt="container_foto_juego_peque">
+            </div>
+            <p>2) Nivel tecnologico:</p>
+            <div class="container_foto_juego_peque">
+                <img src="imagenes/nivel_tecnologico.png" alt="container_foto_juego_peque">
+            </div>
+            <p>3) Cantidad de flota y de que exactamente:</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/flota.png" alt="container_foto_juego">
+            </div>
+            <p>4) Cantidad de defensas y que tienes exactamente:</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/defensas.png" alt="container_foto_juego">
+            </div>
+            <p>5) Tambien se puede subir el nivel tecnologico</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/subir_tecnologia.png" alt="container_foto_juego">
+            </div>
+            <p>6) Te sale en el planeta una  ⚠️<u><b>advertencia</b></u>⚠️ de que tienes pocos recursos y con cuidado porque cuando te quedas sin recursos se termina el juego</p>
             <br></br>
-            <h3>0) Salir del juego</h3>
-            <p>
-                Para salir del juego, simplemente selecciona la opción 0 y confirma tu decisión. ¡Gracias por jugar!
-            </p>
+            <h4>Notificación</h4>
+            <img src="imagenes/pocos_materiales.png" alt="container_foto">
+            <h4>Game Over</h4>
+            <img src="imagenes/fin_partida.png" alt="container_foto">
             <br></br>
-            <h3>5) Ver la flota que viene</h3>
-            <p>
-                Aqui se te mostrara la cantidad y que tiene esa flota enemiga.
-            </p>
-            <br><br>
+            <div class="imagen_de_fondo" style="background-image: url(imagenes/fondo_shop\(de\ momento\).png);">
+                <h3><p>Ventana Shop</p></h3>
+            </div>
+            <p>En esta ventana puedes comprar nuevas tropas para tu flota, para comprar tienes que poner la cantidad que quieres y te mostrara un mensaje de que se ha hecho, pero si no tienes suficiente te hara la compra de la cantidad que te llega para comprar, imagen de ejemplo</p>
+            <div class="container_foto_juego">
+                <img src="imagenes/compras.png" alt="container_foto_juego">
+            </div>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
         </div>
