--- a/M4/WEB/tutorial_instalacion.html
+++ b/M4/WEB/tutorial_instalacion.html
@@ -34,20 +34,17 @@
             <p>
                 Al descargar el archivo comprimido del juego tendrás que descomprimirlo en un sitio que sí o sí te acuerdes.
             </p>
-            <br></br>
             <p>
                 1. Descarga el juego:
             </p>
             <img src="imagenes/paso_1.png" alt="container_foto">
-            <br></br>
             <p>
                 2. Descomprime el archivo en una carpeta que te acuerdes (por ejemplo: escritorio o documentos, en mi caso escritorio):
             </p>
             <img src="imagenes/paso_2.png" alt="container_foto">
-            <br></br>
-            <p>
+            <h2>
                 Apartir de aqui necesitas tener instalado java (<u><b>si ya lo tienes saltate este paso y con la version superior a 11.0.12</b></u>):
-            </p>
+            </h2>
             <br></br>
             <p>
                 Para saber que lo tienes instalado, pulsa <b>Windows + R</b> y escribe <b>cmd</b> luego pulsa <b>Enter</b> o pulsando la tecla de <b>"Windows"</b> y escribe <b>"cmd"</b> luego pulsa <b>Enter</b>. Se te abrira una ventana negra, en la cual tienes que escribir <b>"java -version"</b> o <b>"javac -version"</b> y si te sale algo como esto es que lo tienes instalado (<i><u>la version tiene que ser superior a <b>11.0.12</b></u></i>):
@@ -137,7 +134,7 @@
                 Ahora como podeis ver se nos ha abierto el juego y ya podemos jugar:
             </p>
             <div class="container_foto_especial">
-                <img src="imagenes/juego.png" alt="container_foto_especial">
+                <img src="imagenes/juego1.png" alt="container_foto_especial">
             </div>
             <p></p>
             <p>
