--- a/M4/WEB/sobre_nosotros.html
+++ b/M4/WEB/sobre_nosotros.html
@@ -53,7 +53,7 @@
                 <h1>Miguel</h1>
             </div>    
             <p class="flex-container">
-                <p>Yo me he encargado de la parte del <b><i>programa</i></b></p>
+                <p>Yo me he encargado de la parte del <b><i>programa</i></b> y parte de <b><i>base de datos</i></b></p>
             </p>
         </div>
     </div>
@@ -67,7 +67,7 @@
                 <h1>Biel</h1>
             </div>    
             <p class="flex-container">
-                <p>Yo me he encargado de la parte del <b><i>programa</i></b> y de la parte de <b><i>base de datos</i></b></p>
+                <p>Yo me he encargado de la parte del <b><i>programa</i></b> y la mayor parte de <b><i>base de datos</i></b></p>
             </p>
             <div class="column_espacio"></div>
             <div class="column_espacio"></div>
